--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==20.7
+python-telegram-bot[job-queue]==20.7
 google-api-python-client==2.108.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
@@ -8,4 +8,5 @@ python-dotenv==1.0.0
 PyMuPDF==1.23.8
 Pillow==10.1.0
 pytz==2025.2
+APScheduler==3.10.4
 
